# aeon

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  CODE_WALKTHROUGH.md  INTERNALS.md  LICENSE  README.md  build.bat  build.sh  docker-compose.yml  pyproject.toml
.github/workflows/: build_and_test.yml
benchmarks/: bench_numpy_baseline.py  bench_zerocopy.py
bindings/: README.md
bindings/cpp_unreal/: AeonClient.hpp
bindings/csharp/: AeonMemory.cs
bindings/node/: CMakeLists.txt  bench_bridge.js  bench_lobotomy.ts  index.d.ts  package-lock.json  package.json  tsconfig.json
bindings/node/src/: AeonOpenClawAdapter.ts  aeon_node.cpp
core/: CMakeLists.txt
core/benchmarks/: bench_beam_search.cpp  bench_ebr_contention.cpp  bench_kernel_throughput.cpp  bench_main.cpp  bench_quantization_efficiency.cpp  bench_scalability.cpp  bench_slb_latency.cpp  bench_tiered_atlas.cpp  bench_trace_gc.cpp  bench_wal_overhead.cpp
core/include/aeon/: aeon_c_api.h  atlas.hpp  blob_arena.hpp  core.hpp  epoch.hpp  hash.hpp  hierarchical_slb.hpp  math_kernel.hpp  platform.hpp  quantization.hpp  schema.hpp  simd_impl.hpp  slb.hpp  storage.hpp  tiered_atlas.hpp  trace.hpp  trace_block_index.hpp
core/src/: aeon_c_api.cpp  atlas.cpp  bindings.cpp  core.cpp  simd_impl.cpp  trace.cpp
core/tests/: bench_quantization.cpp  benchmark_math.cpp  test_atlas.cpp  test_blob_arena.cpp  test_concurrency.cpp  test_epoch.cpp  test_math.cpp  test_quantization.cpp  test_storage.cpp  test_wal.cpp
deploy/: Dockerfile
paper/: abstract.tex  architecture.tex  conclusion.tex  evaluation.tex  fig1_block.tex  generate_figures.py  introduction.tex  methodology.tex  paper.tex  paper_final.tex  paper_final_preprint.tex  paper_final_v2.tex  paper_final_v3.tex  references.bib  related_work.tex  slb.tex
paper/ceurws/: main.abs  main.aux  main.bbl  main.blg  main.tex  main.xmpdata  pdfa.xmpi  references.bib  verify.py
reproducibility_benchmarks/: README.md  bench_main.cpp  bench_multitenant_slb.cpp  bench_quantization.cpp  bench_rebac_prefilter.py  bench_v3_dreaming.py  master_metrics.txt  results.json  run_all_benchmarks.sh  run_v3_benchmarks.py
results/: README.md  benchmark_final.json
scripts/: gen_stubs.sh  plot_results.py  run_server.sh  update_paper.py  verify_benchmarks.py  verify_setup.sh
shell/aeon_py/: __init__.py  architect.py  client.py  context.py  core.pyi  dependencies.py  dreamer.py  llm.py  loop.py  models.py  prompt.py  server.py  session.py  trace.py
tests/: test_core_upgrade.py  test_epoch_guard.py  test_phase2.py  test_phase4.py  test_phase5.py  test_phase8.py  test_safety.py  test_server.py  test_trace.py
