[build-system]
requires = ["scikit-build-core>=0.5", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "aeon_py"
version = "0.1.0"
description = "Project Aeon: Cognitive Operating System Shell"
readme = "README.md"
authors = [
  { name = "Aeon Team", email = "dev@aeon.os" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "networkx>=3.2",
    "psutil",
    "requests",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=2.0.0",
]

[tool.scikit-build]
# The CMake target to install
cmake.targets = ["aeon_py_core"]

# Where to put the artifact in the wheel
wheel.install-dir = "aeon_py"
# Where to find the python package source
wheel.packages = ["shell/aeon_py"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "core/src/core.cpp"
regex = "return \"(?P<value>.*?)\";"

# Since we have a src layout where python package is in shell/aeon_py
sdist.include = ["shell/aeon_py/*"]
